--- a/Pathfinder/package.json
+++ b/Pathfinder/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "leaflet": "^1.9.4",
     "node-fetch": "^3.3.2",
     "react": "^18.3.1",
